---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: X.X.2020
  Changes:
    - Added license and copyright information to files.
    - Removed redundant table.insert; thanks Optera.
---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 2.2.2020
  Features:
    - Initial Release
    - Reskins the logistics belts added by Bob's logistics
    - Adds remnants and explosive particle effects on death