@@ -4,6 +4,8 @@ Date: X.X.2020
   Changes:
     - Added license and copyright information to files.
     - Removed redundant table.insert; thanks Optera.
+  Bugfixes:
+    - Fixed entity icons not being appropriately replaced.
 ---------------------------------------------------------------------------------------------------
 Version: 0.18.1
 Date: 2.2.2020
